static/editor.css
#content {
    display: flex;
    height: 650px
}

/* EDITOR PANEL */

#editorPanel {
    float: left;
    width: 65%;
    margin-left: 5%;
    margin-right: 5%;
    margin-top: 10px;
}

#editorPanel-header {
    margin-left: 8px;
}

#editorPanel-sub-header {
    display: flex;
    justify-content: space-between;
    margin: 8px;
}

#sub-headder-box-left {
    display: flex;
    align-items: left;
}

#sub-headder-box-right {
    align-items: right;
}

#changeDayArrowLeft button, #changeDayArrowRight button{
    background-color: white;
    border: none;
    transition: 0.5s ease-out;
}

#changeDayArrowLeft button:hover, #changeDayArrowRight button:hover {
    color: green;
    transition: 0.5s;
}

#changeDayArrowRight-no button, #changeDayArrowLeft-no button {
    color:rgb(196, 196, 196);
    background-color: white;
    border: none;
}

#dayCount {
    padding-left: 4px;
    padding-right: 4px;
}

#date {
    padding-top: 6px;
    color:grey;
}

#activityLogBox {
    width: 100%;
    height: 90%;
    border: 2px solid black;
    border-radius: 40px;
    margin: 8px;
    padding: 30px;
    overflow: scroll;
    background-color: greenyellow;
}

/*ADD EVERYTHING HERE!!!!!!*/
#activityTimeline {
    display:flex;
    justify-content: center;
}

#timeStart, #timeEnd {
    display: flex;
    margin: 15px;
    background-color: white;
    padding-left: 10px;
    padding-top: 5px;
    padding-right: 10px;
}

#timeDropButton {
    padding-top: 4px;
    margin-left: 5px;
    margin-right: 5px;
    background: none;
    border: none;
}

#timeDropButton:hover {
    color:  rgb(196, 196, 196);
    transition: 0.5s;
}

#divider {
    padding-top: 22px;
}

#activityBox {
    border: 2px solid black;
    border-radius: 20px;
}

#transportBox{
    display: flex;
    justify-content: center;
}

#activityBox, #transportBox, #addExtra {
    width: 90%;
    margin: auto;
}

#activityBox {
    background: white;
}

#activityPicture {
    width: 100%;
    height: auto;
    justify-content: center;
    text-align: center;
    align-items: center;
}

#activityPicture img{
    width: 60% ;
    height: auto;
}

#activityPicture img {
    border: 2px solid black;
}

#activityFooter {
    display: flex;
    justify-content:space-between;
    margin-top: 25px;
    margin-bottom: 10px;
    border-top: 2px solid black;
    padding-top: 10px;
}

#activityDescription {
    margin-left: 15px;
    display: flex;
}

#activityDescription h5{
    padding-top: 12px;
}

#editActivityButton {
    background: none;
    border: none;

}

#editActivityButton img {
    width: 30px;
    height: 30px;
    transition: 0.5s ease-out;
}

#editActivityButton img:hover {
    padding: 2px 2px 2px 2px;
    transition: 0.5s;
}

#deleteActivity{
    margin-top: 4px;
}

#deleteButton {
    background: none;
    border: 2px solid red;
    border-radius: 10px;
    background: white;
    color: red;
    padding-top: 6px;
    padding-left: 20px;
    padding-right: 20px;
    margin-right: 15px;
    transition: 0.5s ease-out;
}

#deleteButton:hover {
    padding-left: 22px;
    padding-right: 22px;
    border-color: red;
    background: red;
    color: white;
    transition: 0.5s;
}

#deleteButton img {
    color: red;
    width: 32px;
    height: 32px;
}

#journeyBox-box {
    display: flex;
    justify-content: space-around;
}

#detailJourneyButton {
    background: none;
    border: none;
    border-radius: 8px;
    transition: 0.5s ease-out;
}

#detailJourneyButton:hover {
    background-color: rgb(196, 196, 196);
    transition: 0.5s;
}

#detailJourneyButton img {
    height: 30px;
    width: 30px;
}

#etaBox {
    padding-top: 14px;
    margin: 0 10px 0 10px;
}

#journeyBox-box {
    border: 2px solid black;
    border-radius: 10px;
    background: white;
    align-items: center;
    margin-top: 10px;
}

#processArrow {
    margin-left: 20px;
    margin-right: 20px;
}

#transportDescription, #transportLogo,#transportInfo {
    height: 28px;
    padding: 0 5px 0 5px;
}

#addExtra {
    margin: auto;
    text-align: center;
    height: 28px;
}

#addButton {
    background: none;
    border: none;
    color: green;
    transition: 0.5s ease-out;
}

#addButton :hover {
    padding: 2px 2px 2px 2px;
    color: rgb(1, 180, 1);
    transition: 0.5s;
}

#activityPanelFooter {
    display: flex;
    justify-content: space-between;
    padding-top: 10px;
    margin: 8px;
    width: 100%;
}

#deleteItinerary,#saveItinerary {
    text-align: center;
    vertical-align: center;
}

#deleteItineraryButton {
    width: 200px;
    padding-top: 8px;
    border: 2px solid red;
    border-radius: 10px;
    background-color: white;
    color: red;
    cursor: pointer;
    transition: 0.5s ease-out;
}

#saveItineraryButton {
    width: 145px;
    padding-top: 8px;
    border: 2px solid green;
    border-radius: 10px;
    background-color: white;
    color: green;
    cursor: pointer;
    transition: 0.5s ease-out;
}

#saveItineraryButton:hover{
    background-color: green;
    color:white;
    transition: 0.5s;
}

#deleteItineraryButton:hover{
    background-color: red;
    color: white;
    transition: 0.5s;
}

#borderLine {
    height: 93vh;
    border-left: 5px solid green;
    margin-left: 5px;
    margin-right: 5px;
}

/* RECOMMENDATION PANEL */

#recommendationsPanel {
    float: right;
    width: 25%;
    margin: 10px;
}

#recommendationsPanel-header{
    margin: auto;
    text-align: center;
    align-items: center;
}

#filters {
    width: 100%;
    justify-content: center;
    align-items: center;
}

#recommendations {
    width: 100%;
    justify-content: center;
    align-items: center;
    margin: 15px;
}

/* FILTER 1 */

#filter2 {
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}

#filterContent {
    border: 2px solid green;
    border-radius: 30px;
    padding: 5px;
    display: flex;
}

#filterContent:hover:only-child {
    border-color: green;
    transition: 1s;
}

#filterName, #filterNumber, #extendFilter {
    padding-left: 5px;
    padding-right: 5px;
    padding-top: 5px;
    color: green;
}

#extendFilter {
    position: relative;
    display: inline-block;
}

#extendFilterButton {
    background-color: transparent;
    border: none;
}

#extendFilter:hover #extendedFilters {
    display: block;
    right: -25px;
}

#extendedFilters {
    border: 1px solid black;
    border-radius: 10px;
    display: none;
    position: absolute;
    background-color: #f9f9f9;
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    padding: 12px 16px;
    z-index: 1;
}

#filtersSelected {
    width: 100%;
    text-align: center;
    font-weight: bolder;
}

#recom {
    width: 100%;
    align-items: center;
    display: flex;
    flex-direction: column;
    border: 2px solid green;
    border-radius: 25px;
    position: relative;
    margin-left: -15px;
}

#recomImage {
    height: 250px;
    width: 90%;
    margin: 10px;
}

#addSign {
    position: absolute;
    right: 0;
    top: 0;
    margin:20px
}

#recomDescription {
    text-align: center;
}

#rating {
    display: flex;
    border: 2px solid green;
    color: green;
    border-radius: 30px;
    padding-top: 6px;
}

#rating h6, #rating img{
    padding: 5px;
}

#rating h6 {
    padding-left: 10px;
}

